--- a/becas.html
+++ b/becas.html
@@ -65,6 +65,16 @@
 
     <!--Contenido de la pagina ///////////////////////////////////////////////-->
     <div class="container mt-3 mb-3">
+        <div class="row">
+      <div class="col-12 col-md-4">
+        <img src="/img/logo.png" alt="Logo">
+      </div>
+      <div class="col-12" col-md-4>
+        <h2 class="text-center">COORDINACIÓN DE EDUCACIÓN <P>
+          SOLICITUD DE BECA
+        </h2>
+      </div>
+    </div>
     <form class="form" method="POST" action="">
       <H2 class="text-center">INFORMACIÓN DEL ALUMNO</H2>
   
