Numero max de caracteres en edad, falta validar el max en todos los input

--- a/becas.html
+++ b/becas.html
@@ -104,7 +104,7 @@
               <div class="form-group">
                 <label class="font-weight-bold text-uppercase" for="edadA">Edad:</label>
                 <input type="text" class="form-control" id="edadA" placeholder="Cuantos años tienes"
-                  name="EdadDelEstudiante" required>
+                  name="EdadDelEstudiante" maxlength="2" required>
               </div>
             </div>
             <div class="col-md-9">
@@ -308,8 +308,7 @@
         </div>
       </div>
 
-      <hr>
-      </hr>
+      <hr></hr>
 
       <div class="card">
         <div class="card-header">
@@ -334,7 +333,6 @@
               alumno está inscrito</label>
             <input type="file" class="form-control-file" id="boleta">
           </div>
-
 
         </div>
       </div>
