--- a/utiles.html
+++ b/utiles.html
@@ -67,7 +67,7 @@
   <div class="container mt-3 mb-3">
     <h1>Coordinación de Educación Municipal</h1>
     <h2>Solitud de Becas Monetarias</h2>
-    <form class="form" method="POST" action="">
+    <form class="form" method="POST" action="insertAplication.php">
 
       <div class="card">
         <div class="card-header">
@@ -79,7 +79,7 @@
               <div class="form-group">
                 <label class="font-weight-bold" for="nombrerA">Nombre:</label>
                 <input type="text" class="form-control" placeholder="Nombre(s)" id="nombrerA"
-                  name="NombresDelEstudiante" maxlength="50" required>
+                  name="nombreAlumno" maxlength="50" required>
               </div>
             </div>
           </div>
