--- a/utiles.html
+++ b/utiles.html
@@ -355,7 +355,7 @@
       <br><br>
       <div class="row">
         <div class="col-12 justify-content-center">
-          <input type="submit" class="col-12 btn btn-warning btn-block" value="Enviar">Enviar Solitud</button>
+          <input type="submit" class="col-12 btn btn-warning btn-block" value="Enviar">Enviar Solitud</input>
         </div>
       </div>
     </form>
