Texto del Boton Mas entendible

--- a/utiles.html
+++ b/utiles.html
@@ -78,8 +78,8 @@
             <div class="col-12 ">
               <div class="form-group">
                 <label class="font-weight-bold" for="nombrerA">Nombre:</label>
-                <input type="text" class="form-control" placeholder="Nombre(s)" id="nombrerA"
-                  name="nombreAlumno" maxlength="50" required>
+                <input type="text" class="form-control" placeholder="Nombre(s)" id="nombrerA" name="nombreAlumno"
+                  maxlength="50" required>
               </div>
             </div>
           </div>
@@ -103,21 +103,23 @@
             <div class="col-md-3">
               <div class="form-group">
                 <label class="font-weight-bold" for="edadA">Edad:</label>
-                <input type="text" class="form-control" id="edadA" placeholder="Cuantos años tienes"
-                  name="EdadAlumno" maxlength="2" required>
+                <input type="text" class="form-control" id="edadA" placeholder="Cuantos años tienes" name="EdadAlumno"
+                  maxlength="2" required>
               </div>
             </div>
             <div class="col-md-9">
               <div class="form-group">
                 <label class="font-weight-bold" for="curp">CURP:</label>
-                <input type="text" class="form-control" maxlength="18" id="curp" placeholder="CURP" name="CurpAlumno" required>
+                <input type="text" class="form-control" maxlength="18" id="curp" placeholder="CURP" name="CurpAlumno"
+                  required>
               </div>
             </div>
           </div>
           <div class="row">
             <div class="form-group col-9">
               <label class="font-weight-bold" for="domicilioA">Domicilio:</label>
-              <input type="text" class="form-control" maxlength="40" id="domicilioA" placeholder="Calle" name="Calle" required>
+              <input type="text" class="form-control" maxlength="40" id="domicilioA" placeholder="Calle" name="Calle"
+                required>
             </div>
             <div class="form-group col-3">
               <label class="font-weight-bold" for="num_exA">Número Exterior:</label>
@@ -155,7 +157,7 @@
             <div class="form-check form-check-inline">
               <input class="form-check-input" type="radio" name="Secundaria" id="secundaria" value="S">
               <label class="form-check-label" for="secundaria">Secundaria</label>
-            </div>              
+            </div>
           </div>
           <div class="row">
             <div class="form-group col-md-4">
@@ -170,12 +172,12 @@
                 <option>1 Grado de Secundaria</option>
                 <option>2 Grado de Secundaria</option>
                 <option>3 Grado de Secundaria</option>
-            </select>        
+              </select>
             </div>
             <div class="form-group col-md-4">
               <label class="font-weight-bold" for="promedio">Promedio:</label>
-              <input type="text" class="form-control" id="promedio" placeholder="Promedio actual"
-                name="PromedioAlumno" maxlength="5" required>
+              <input type="text" class="form-control" id="promedio" placeholder="Promedio actual" name="PromedioAlumno"
+                maxlength="5" required>
             </div>
           </div>
           <div class="form-group">
@@ -198,7 +200,7 @@
               <div class="form-check form-check-inline">
                 <input class="form-check-input" type="radio" name="Vespertino" id="Vespertino" value="V">
                 <label class="form-check-label" for="Vespertino">Vespertino</label>
-              </div>              
+              </div>
             </div>
           </div>
         </div>
@@ -220,7 +222,7 @@
             <div class="form-group col-md-6">
               <label class="font-weight-bold" for="trabajoP">Ocupación:</label>
               <input type="text" class="form-control" id="trabajoP" placeholder="En que trabaja" name="ocupacionPadre"
-              maxlength="30" required>
+                maxlength="30" required>
             </div>
             <div class="form-group col-md-6">
               <label class="font-weight-bold" for="trabajoP">Lugar Donde Trabaja:</label>
@@ -237,7 +239,7 @@
             <div class="form-group col-md-6">
               <label class="font-weight-bold" for="trabajoP">Ocupación:</label>
               <input type="text" class="form-control" id="trabajoP" placeholder="En que trabaja" name="ocupacionMadre"
-              maxlength="80" required>
+                maxlength="80" required>
             </div>
             <div class="form-group col-md-6">
               <label class="font-weight-bold" for="trabajoP">Lugar Donde Trabaja:</label>
@@ -248,12 +250,13 @@
           <div class="row">
             <div class="form-group col-12">
               <label class="font-weight-bold" for="nombreP">Nombre del Tutor:</label>
-              <input type="text" class="form-control" maxlength="80" id="nombreP" placeholder="Nombre del Tutor" name="Tutor" required>
+              <input type="text" class="form-control" maxlength="80" id="nombreP" placeholder="Nombre del Tutor"
+                name="Tutor" required>
             </div>
             <div class="form-group col-md-6">
               <label class="font-weight-bold" for="trabajoP">Ocupación:</label>
-              <input type="text" class="form-control" maxlength="40" id="trabajoP" placeholder="En que trabaja" name="ocupacionTutor"
-                required>
+              <input type="text" class="form-control" maxlength="40" id="trabajoP" placeholder="En que trabaja"
+                name="ocupacionTutor" required>
             </div>
             <div class="form-group col-md-6">
               <label class="font-weight-bold" for="trabajoP">Lugar Donde Trabaja:</label>
@@ -294,7 +297,7 @@
             </div>
             <div class="form-group col-md-6">
               <label class="font-weight-bold" for="telA">Teléfono</label>
-              <input type="text" class="form-control"  maxlength="10" id="telA" placeholder="Número telefónico"
+              <input type="text" class="form-control" maxlength="10" id="telA" placeholder="Número telefónico"
                 name="Telefono" required>
             </div>
           </div>
@@ -313,18 +316,19 @@
               <div class="form-check form-check-inline">
                 <input class="form-check-input" type="radio" name="InformacionTutor" id="InformacionTutor" value="T">
                 <label class="form-check-label" for="InformacionTutor">Tutor</label>
-              </div>          
+              </div>
             </div>
             <div class="form-group col-md-6">
               <label class="font-weight-bold" for="dato">Nombre de quien da la Información:</label>
-              <input type="text" class="form-control"  maxlength="80" id="dato" placeholder="Nombre completo"
+              <input type="text" class="form-control" maxlength="80" id="dato" placeholder="Nombre completo"
                 name="Informacion" required>
             </div>
           </div>
         </div>
       </div>
 
-      <hr></hr>
+      <hr>
+      </hr>
 
       <div class="card">
         <div class="card-header">
@@ -338,15 +342,15 @@
 
           <div class="form-group">
             <label class="font-weight-bold text-uppercase" for="domicilio">Comprobante de domicilio (NO mayor a 3 meses
-              de
-              antigüedad)</label>
+              de antigüedad)</label>
             <input type="file" class="form-control-file" id="domicilio">
           </div>
 
           <div class="form-group">
-            <label class="font-weight-bold text-uppercase" for="boleta">Boleta o constancia con promedio emitida por el
-              sistema educativo donde compruebe que el
-              alumno está inscrito</label>
+            <label class="font-weight-bold text-uppercase" for="boleta">
+              Boleta o constancia con promedio emitida por el sistema educativo donde compruebe que el alumno está
+              inscrito
+            </label>
             <input type="file" class="form-control-file" id="boleta">
           </div>
 
