--- a/utiles.html
+++ b/utiles.html
@@ -270,15 +270,15 @@
               <div class="form-check">
                 <p>Pudes selecionar Varias Opciones</p>
                 <div class="form-check form-check-inline">
-                  <input class="form-check-input" type="checkbox" id="Padre" name="Padre" value="P">
+                  <input class="form-check-input" type="checkbox" id="Padre" name="Padres" value="P">
                   <label class="form-check-label" for="Padre">Padre</label>
                 </div>
                 <div class="form-check form-check-inline">
-                  <input class="form-check-input" type="checkbox" id="Madre" name="Madre" value="M">
+                  <input class="form-check-input" type="checkbox" id="Madre" name="Padres" value="M">
                   <label class="form-check-label" for="Madre">Madre</label>
                 </div>
                 <div class="form-check form-check-inline">
-                  <input class="form-check-input" type="checkbox" id="Tutor" name="Tutor" value="T">
+                  <input class="form-check-input" type="checkbox" id="Tutor" name="Padres" value="T">
                   <label class="form-check-label" for="Tutor">Tutor</label>
                 </div>
               </div>
